--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
     </ul>
   </nav>
 
+
   <section id="home" class="hero">
     <div class="hero-overlay"></div>
     <div class="hero-content">
@@ -43,6 +44,12 @@
           show results only after you upload data or choose sample data.
         </p>
       </div>
+      <!-- 🔴 Admin Portal Button -->
+        <div class="admin-access-button-box">
+          <a href="https://admin-celelytics.onrender.com/" target="_blank" class="admin-portal-btn">
+            ⚙️ Access Admin Portal
+          </a>
+        </div>
     </div>
   </section>
 
